--- a/app/src/main/res/layout/query_fragment.xml
+++ b/app/src/main/res/layout/query_fragment.xml
@@ -1,43 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <Button
-        android:layout_width="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="BGL"
+        android:background="#17b5fe"
         android:id="@+id/buttonBGLQuery"
         android:layout_gravity="center_horizontal" />
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:text="Prescription"
+        android:background="#17b5fe"
         android:id="@+id/buttonQueryPrescription"
         android:layout_gravity="center_horizontal" />
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:text="Medication"
+        android:background="#17b5fe"
         android:id="@+id/buttonQueryMed"
         android:layout_gravity="center_horizontal" />
     <Button
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Diet"
         android:id="@+id/buttonQueryDiet"
-        android:layout_gravity="center_horizontal" />
+        android:layout_margin="10dp"
+        android:layout_width="match_parent"
+        android:background="#17b5fe"
+        android:text="Diet" />
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:text="Exercise"
         android:id="@+id/buttonQueryExercise"
+        android:background="#17b5fe"
         android:layout_gravity="center_horizontal" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="#ff5354"
         android:text="Clear Database"
-        android:id="@+id/buttonClear"
-        android:layout_gravity="center_horizontal" />
-
+        android:id="@+id/buttonClear" />
 </LinearLayout>
