--- a/app/src/main/res/layout/bglquerymain_fragment.xml
+++ b/app/src/main/res/layout/bglquerymain_fragment.xml
@@ -3,8 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="#17b5fe"
         android:text="Find All BGLs"
         android:id="@+id/buttonBGLAll"
         android:layout_gravity="center_horizontal" />
@@ -40,25 +42,28 @@
         android:focusable="false"/>
 
     </LinearLayout>
-    <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="2">
+        android:orientation="horizontal">
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Find All Before Date"
+            android:layout_margin="10dp"
+            android:background="#17b5fe"
             android:id="@+id/buttonBGLQueryBefore"
             android:layout_gravity="center_horizontal" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Find All After Date"
+            android:layout_margin="10dp"
+            android:background="#17b5fe"
             android:id="@+id/buttonBGLQueryAfter"
             android:layout_gravity="center_horizontal" />
-    </LinearLayout>
+
 
 
 </LinearLayout>
