--- a/app/src/main/res/layout/medicationmain_fragment.xml
+++ b/app/src/main/res/layout/medicationmain_fragment.xml
@@ -3,7 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_margin="10dp"
+        android:background="#17b5fe"
         android:layout_height="wrap_content"
         android:text="Find All Medication Entries"
         android:id="@+id/buttonMedAll"
@@ -39,25 +41,23 @@
             android:focusable="false"/>
 
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="2">
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="#17b5fe"
             android:text="Find Medication Before Date"
             android:id="@+id/buttonMedBefore"
             android:layout_gravity="center_horizontal" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="#17b5fe"
             android:text="Find Medication After Date"
             android:id="@+id/buttonMedAfter"
             android:layout_gravity="center_horizontal" />
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -72,8 +72,10 @@
             />
     </LinearLayout>
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="#17b5fe"
         android:text="Find Medication by Keyword"
         android:id="@+id/buttonMedKeyword"
         android:layout_gravity="center_horizontal" />
