--- a/app/src/main/res/layout-land/bgl_fragment.xml
+++ b/app/src/main/res/layout-land/bgl_fragment.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
 
-
-    <android.support.v7.widget.RecyclerView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="235dp"
+        android:layout_height="match_parent"
+        android:weightSum="100">
+    <android.support.v7.widget.RecyclerView
+        android:layout_weight="75"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:id="@+id/RecyclerViewBGLHolder"
         />
     <LinearLayout
+        android:layout_weight="25"
         android:padding="5dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="horizontal"
         android:weightSum="3">
 
@@ -85,5 +91,5 @@
         </RelativeLayout>
 
     </LinearLayout>
-
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
