--- a/app/src/main/res/layout/main_buttons_fragment.xml
+++ b/app/src/main/res/layout/main_buttons_fragment.xml
@@ -211,4 +211,12 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Notificaiton"
+        android:id="@+id/notButton"
+        android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
