--- a/app/src/main/res/layout/prescription_entry_view.xml
+++ b/app/src/main/res/layout/prescription_entry_view.xml
@@ -5,19 +5,43 @@
     android:background="@drawable/layout_corning_med"
     android:padding="5dp"
     android:layout_margin="10dp">
+    <RadioGroup
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:id="@+id/radioGroupCatType"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinnerPrescriptionCat"
-        android:layout_centerHorizontal="true" />
+        <RadioButton
+            android:id="@+id/radioButtonMed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/textEditMedication"
+            android:textStyle="bold"
+            />
+        <RadioButton
+            android:id="@+id/radioButtonExer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/textEditExercise"
+            android:textStyle="bold"
+            />
+        <RadioButton
+            android:id="@+id/radioButtonDiet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/textEditDiet"
+            android:textStyle="bold"
+            />
+
+    </RadioGroup>
 
     <LinearLayout
         android:id="@+id/linearlayoutMedication"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@+id/spinnerPrescriptionCat">
+        android:layout_below="@+id/radioGroupCatType">
 
         <EditText
             android:id="@+id/editTextPrescDescription"
@@ -30,19 +54,41 @@
     </LinearLayout>
 
     <LinearLayout
-        android:weightSum="3"
+        android:weightSum="4"
         android:orientation="horizontal"
         android:layout_below="@id/linearlayoutMedication"
         android:id="@+id/linearLayoutRepeat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <Spinner
-            android:layout_width="wrap_content"
+        <TextView
+            android:layout_gravity="center_vertical"
+            android:layout_width="0dp"
+            android:layout_weight=".6"
             android:layout_height="wrap_content"
-            android:id="@+id/spinnerPrescription"
-            android:layout_centerHorizontal="true" />
+            android:text="Repeat"/>
 
+        <RadioGroup
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioGroupRepeat">
+
+            <RadioButton
+                android:id="@+id/radioButtonDaily"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/daily"
+                android:textStyle="bold"
+                />
+            <RadioButton
+                android:id="@+id/radioButtonWeekly"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/weekly"
+                android:textStyle="bold"
+                />
+        </RadioGroup>
         <LinearLayout
             android:layout_weight="2"
             android:gravity="center"
@@ -51,7 +97,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/linearLayoutPrescDateTime">
-
+            <EditText
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:textSize="14sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/editTextPrescDate"
+                android:onClick="showDatePickerDialog"/>
             <EditText
                 android:focusable="false"
                 android:focusableInTouchMode="false"
@@ -79,14 +132,5 @@
 
         </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:weightSum="4"
-        android:orientation="horizontal"
-        android:layout_below="@id/linearLayoutRepeat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        </LinearLayout>
-
 
 </RelativeLayout>
