--- a/app/src/main/res/layout/bglquerymain_fragment.xml
+++ b/app/src/main/res/layout/bglquerymain_fragment.xml
@@ -43,6 +43,7 @@
 
     </LinearLayout>
 
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -63,7 +64,7 @@
             android:background="#17b5fe"
             android:id="@+id/buttonBGLQueryAfter"
             android:layout_gravity="center_horizontal" />
-
+    </LinearLayout>
 
 
 </LinearLayout>
